Android: Use proper empty strings in key events

A key event with no unicode would get a text of "\0" instead of
the empty string. This would lead to various widgets interpreting
the Key_Back event as text input, meaning that it would be grabbed
by the widget instead of being propagated.

Task-number: QTBUG-35784
Change-Id: Ibdb0e491572e41dd1aaf3b03ae1a780731f0559a
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>

cregit: 80d4a19f514f66c4ef2c8b5aa40039fdb6b8dd53 https://github.com/qt/qtbase/commit/80d4a19f514f66c4ef2c8b5aa40039fdb6b8dd53