src/plugins/platforms/android/androidjniinput.cpp
@@ -11,6 +11,7 @@ DECL|function|mouseUp
 DECL|function|registerNatives
 DECL|function|resetSoftwareKeyboard
 DECL|function|showSoftwareKeyboard
+DECL|function|toString
 DECL|function|touchAdd
 DECL|function|touchBegin
 DECL|function|touchEnd
